added inflator recommendations and copied language from old manual

--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -72,4 +72,16 @@
         <td class="plainTableNormalCell">15 Cleaning and Oiling Cycles</td>
         <td class="plainTableNormalCell">OM Supplement 04-0167, <xref sectionTarget="2.50.50" prependLabel="Section">Cross Reference Placeholder</xref></td>
     </tr>
+    <tr>
+        <td class="plainTableNormalCell">510226-401</td>
+        <td class="plainTableNormalCell">Amsafe Inflator</td>
+        <td class="plainTableNormalCell">10 Years</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.20.2" prependLabel="Section"></xref></td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">510184-401</td>
+        <td class="plainTableNormalCell">Amsafe Inflator</td>
+        <td class="plainTableNormalCell">10 Years</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.20.2" prependLabel="Section"></xref></td>
+    </tr>
 </table>
