updates per manual party #1

--- a/html/Maintenance/Common Causes of Compressor Failure.html
+++ b/html/Maintenance/Common Causes of Compressor Failure.html
@@ -1,5 +1,5 @@
-<ol type="A">
-    <li>Compressor Overheated
+<ul>
+    <li>Compressor Overheating
         <p>Overheating is most often caused by loss of refrigerant charge. Cool suction side refrigerant returning from the
             evaporator provides cooling for the compressor. Once the refrigerant charge is lost there is no refrigerant
             entering
@@ -9,7 +9,7 @@
 
     </li>
 
-    <li>Compressor Contaminated
+    <li>Compressor Contamination
         <figure>
             <img class="imageCentered_4x3" src="img/img_AirConditionerCompressorContamination.png">
             <figcaption class="centerText">Compressor Contamination</figcaption>
@@ -52,4 +52,4 @@
 
     </li>
 
-</ol>
+</ul>
