--- a/html/Maintenance/ENGINE DRIVEN AIR CONDITIONER.html
+++ b/html/Maintenance/ENGINE DRIVEN AIR CONDITIONER.html
@@ -22,4 +22,6 @@
 
 <p>Servicing procedures for the air conditioner are generally the same as those for comparable automotive units. Most
     servicing is accomplished by adding or removing Refrigerant R-134a at the servicing ports. These ports are located
-    beneath the upper right-hand side skin immediately aft of the cockpit. </p>
+    beneath the upper right-hand side skin immediately aft of the cockpit.</p>
+
+<p>The low pressure port has a blue cap and the high pressure port has a red cap.</p>
