--- a/html/Maintenance/Elevator - Flap Interconnect System Rigging.html
+++ b/html/Maintenance/Elevator - Flap Interconnect System Rigging.html
@@ -9,14 +9,14 @@
 <p><b><u>Rigging Instructions</u></b></p>
 
 <ol type="1">
-    <li>Completely retract the flaps to the 0° position.</li>
+    <li>Ensure flaps are rigged.  Completely retract the flaps to the 0° position.</li>
 
     <li>Disconnect the elevator down spring (p/n 70814-3 for single controls, p/n 70814-1 for dual controls) where it
         connects to the aft elevator controls idler. This can be done with the flight control stick in the full forward
         position. </li>
 
     <li>After the spring is disconnected, lock the flight control stick in the neutral position using the cockpit
-        control lock. Conform the elevators are in the neutral position. </li>
+        control lock. Confirm the elevators are in the neutral position. </li>
 
     <li>Check the hole-to-hole length of the 70796-1 pushrod that connects the flap torque tube to the 70788-1 cable
         tensioner assembly. This length should be 10-1/2 (+/-1/8) inches. </li>
