--- a/html/Maintenance/Elevator Controls.html
+++ b/html/Maintenance/Elevator Controls.html
@@ -5,9 +5,10 @@
     <figcaption class="centerText">Elevator Controls</figcaption>
 </figure>
 
-<p>Due to dynamic forces at airspeeds above 140 mph, some aircraft may develop an oscillation about the pitch axis if flown with hands off the control stick, and rough air is encountered. Full control of the aircraft is accomplished by hands on the control stick, which will stop the oscillation. </p>
-
-<p>The factory has determined that by adding a small amount of friction in the elevator control system, the oscillation is damped with hands off the control stick. </p>
+<p>
+    Due to dynamic forces at airspeeds above 140 mph, some aircraft may develop an oscillation about the pitch axis if flown with hands off the control stick, and rough air is encountered. Full control of the aircraft is accomplished by hands on the control stick, which will stop the oscillation.
+    The factory has determined that by adding a small amount of friction in the elevator control system, the oscillation is damped with hands off the control stick. 
+</p>
 
 <p>A friction device has been designed which bolts to the fuselage frame at the support bracket for the p/n 70117-1 elevator idler. This device is shown below in <xref fileTarget="img_Fig_68A.png" xrefType="link">Fig Cross Reference</xref>. Friction is achieved by the clamping action about the elevator idler housing.  </p>
 
