--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -1,4 +1,4 @@
-<p>Details of the elevator trim tab cockpit controls are shown in <xref fileTarget="img_ElevatorTrimControls.png">Cross
+<p>Details of the elevator trim tab controls are shown in <xref fileTarget="img_ElevatorTrimControls.png">Cross
         Reference Placeholder</xref>. The elevator trim tab system uses the elevator tabs as both trim tabs and as
     elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
 <figure>
