--- a/html/Maintenance/Flushing.html
+++ b/html/Maintenance/Flushing.html
@@ -1,5 +1,4 @@
-<p><b>Flushing Notes</b></p>
-<ol type="a">
+<ol>
     <li>Equipment Types
         <p>Refrigerant recovery recycle machines which contain a flushing circulating pump to solvent- clean
             using
@@ -21,13 +20,10 @@
             release the blockage to pulse the flushing solvent out.</p>
     </li>
     <li>Safety
-        <p>Do not use flammable fluids.</p>
-        <p>Protect eyes with safety goggles.</p>
-        <p>Wear chemical resistant gloves.</p>
-        <p>Use approved fluids. CFCs R-11,113 or 115 and Methyl Chloroform also known as 1,1,1, Trichloroethane
-            are
-            not
-            acceptable per the Clean Air Act.</p>
+        <p>Do not use flammable fluids.
+        Protect eyes with safety goggles.
+        Wear chemical resistant gloves.
+        Use approved fluids.</p>
     </li>
     <li>Acceptable Flushing Fluids
         <p>Fluids designated for air conditioning flushing should be used and may be either solvent or lubricant
