--- a/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
+++ b/html/Maintenance/TORQUE VALUES AND GUIDANCE FOR BOLT INSTALLATION.html
@@ -24,7 +24,7 @@
     may be substituted for a regular washer where a bolt is a little short. </p>
 
 <p>Torque values for nuts and bolts are shown in the table below. A specific torque callout in the manual supersedes any
-    value listed here. </p>
+    value listed here. When possible, apply torque to the nut.  If it is not possible to apply torque to the nut, use the upper value shown in the table below.</p>
 
 <table class='plainTableLarge'>
     <tr>
@@ -40,7 +40,7 @@
     <tr>
         <!-- <td class='plainTableNormalCell centerText'></td> --><!--Commented out so Thread size cell can have rowspan=3-->
         <td class='plainTableHeaderCell centerText'>[in-lb]</td>
-        <td class='plainTableHeaderCell centerText'>ft-lb]</td>
+        <td class='plainTableHeaderCell centerText'>[ft-lb]</td>
         <td class='plainTableHeaderCell centerText'>[in-lb]</td>
         <td class='plainTableHeaderCell centerText'>[ft-lb]</td>
     </tr>
@@ -130,7 +130,7 @@
     </tr>
     <tr>
         <td class='plainTableNormalCell centerText'>1-1/14-12</td>
-        <td class='plainTableNormalCell centerText'>0000-12000</td>
+        <td class='plainTableNormalCell centerText'>9000-12000</td>
         <td class='plainTableNormalCell centerText'>750-1000</td>
         <td class='plainTableNormalCell centerText'>5400-6600</td>
         <td class='plainTableNormalCell centerText'>450-550</td>
