--- a/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
+++ b/html/Maintenance/Aileron - Rudder Interconnect System Rigging.html
@@ -16,7 +16,7 @@
         the interface of the longeron and diagonal tube. See <xref fileTarget="img_AileronRudderInterconnectArms.png" xrefType="link">Fig Cross Reference</xref>. If necessary, loosen the clamp, adjust it within
         this range, and re-tighten hardware.</li>
 
-    <li>Check the position of each centering spring. Ensue that the Adel clamp anchoring each spring is located at a
+    <li>Check the position of each centering spring. Ensure that the Adel clamp anchoring each spring is located at a
         position of 8-3/4 (+/- 1/16) inches from the center of the clamp. See <xref fileTarget="img_AileronRudderInterconnectArms.png" xrefType="link">Fig Cross Reference</xref>. Adjust the position of the Adel
         clamps if necessary. </li>
 
@@ -28,12 +28,17 @@
     <li>Ensure that the 70525 interconnect cable is connected to the inboard idler arm. The position of this cable
         attachment varies with the serial number of the aircraft. See <xref fileTarget="img_AileronRudderInterconnectArms.png" xrefType="link">Fig Cross Reference</xref>.
 
-        <p>For serial Numbers -0001 thru -0073, -0075, and -0076: the cable should attach to the top hole in the inboard
-            idler arm (approx. 3/8 from the end).</p>
+        <ul>
+            <li>
+                For serial Numbers -0001 thru -0073, -0075, and -0076: the cable should attach to the top hole in the inboard
+                            idler arm (approx. 3/8 from the end).
+            </li>
+            <li>
 
-        For Serial Numbers -0074, and -0077 & subsequent: the cable should attach to the second hole in the inboard
-        idler arm (approx. 1 3/8 from the end).
-
+                For Serial Numbers -0074, and -0077 & subsequent: the cable should attach to the second hole in the inboard
+                idler arm (approx. 1 3/8 from the end).
+            </li>
+        </ul>
     </li>
 
     <li>Manually center the rudder and hold in place. </li>
@@ -67,10 +72,6 @@
         the right-hand aileron to rise and applying full left-hand rudder input should result in a tendency for the
         left-hand aileron to rise. </li>
 </ol>
-
-<p>If you operate an aircraft in the serial number -0001 through -0020 range, there has been a previous incident where one balance cable in the aileron control system became loose. The cable rode over the rim of a pulley and caused a drag force in the control stick. The aircraft remained controllable and was returned to the landing strip without further incident. A change in the design was made to prevent this from happening on serial number -0021 and subsequent.</p>
-
-<p>The aileron rudder interconnect system has been changed to incorporate a spring in each cable where it attaches to the control stick torque horn. This spring helps keep the interconnect cable tight. Consult Service Letter #150 if you need to update your aircraft with this improvement.</p>
 
 <p>Air Tractor has received a report of an in-flight jamming of a rudder pedal. The pilot was able to maintain control and, after landing, a cable pulley in the rudder system was found to be broken. Due to the numerous unsecured items in the baggage compartment, it is believed that one or more items fouled the cables causing the cables to jam resulting in a subsequent failure of the pulley. 
 </p>
