--- a/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
+++ b/html/Maintenance/Aileron Boost Tab Trim and Rigging.html
@@ -3,7 +3,9 @@
 <p>The initial rigging of the Aileron Boost Tabs is performed as follows:</p>
 <ol type='1'>
     <li>Lock the flight control stick in the neutral position using the cockpit control lock. Confirm that the ailerons
-        are in the neutral position and rigged in accordance with the aircraft Owner's Manual.</li>
+        are in the neutral position and rigged in accordance with 
+        <xref sectionTarget="2.30.1" prependLabel="Section"></xref>
+        .</li>
 
     <li>Using a straight edged tool approximately 6 inches in length, check that the lower surface of the boost tab is
         in line with the lower surface of the aileron. Make this check within 4 inches of the boost tab control horn.
@@ -58,7 +60,7 @@
 
 <b><u>Final Check:</u></b>
 <ol type="1">
-    <li>Ensue that the total adjustment for each boost tab has not exceeded one full turn of any rod end bearing from
+    <li>Ensure that the total adjustment for each boost tab has not exceeded one full turn of any rod end bearing from
         the initial rigged position. If additional adjustment is required, contact the Air Tractor factory for
         assistance. </li>
 
