--- a/html/Maintenance/Aileron Rigging.html
+++ b/html/Maintenance/Aileron Rigging.html
@@ -6,7 +6,7 @@
 
 <p>The ailerons are rigged with the trailing edge 1/8" to 3/16" below the flap trailing edge so that flight loads will bring the trailing edge up approximately even with the flap trailing edge. Aileron travel (with flaps up) is 17° up (+/- 1°) and 13° down (+/- 1°). Aileron control stops are located under the cockpit floor on each side of the control stick torque tube horn. Additional up-aileron stops are located in the wing at the aileron bellcrank. The adjustment consists of tightening or loosening the bolts that compress a stack of 4 to 6 neoprene washers (p/n 70067-1). The neoprene washers act as shock absorbers for the control system, but sometimes split and fall out, so it is advisable to inspect the stops and replace the neoprene washers as necessary during 12-month inspections. </p>
 
-<p>Installed in aircraft serial numbers -0001 through -0083, there is an aileron stop bracket attached to the wing rib. It is designed so that the aileron bellcrank contacts a spring loaded plunger, and then as the aileron moves farther, a hard stop establishes the final limit of aileron travel.
+<p>There is an aileron stop bracket attached to the wing rib. It is designed so that the aileron bellcrank contacts a spring loaded plunger, and then as the aileron moves farther, a hard stop establishes the final limit of aileron travel.
 </p>
 
 <p>There has been one incident recorded of a parked aircraft experiencing a hard wind storm from the rear, causing deflection of the stop bracket sufficiently so that the plunger slipped past the bellcrank arm and would not return. If this occurs, the ailerons are frozen in the fully deflected position.
@@ -14,5 +14,3 @@
 
 <p>To prevent this from happening in flight, Air Tractor redesigned the bracket that holds the spring plunger to be more rigid and to eliminate the possibility that the plunger will slip past the arm. Operators should verify that the bellcrank is striking the plunger solidly. 
 </p>
-
-<p>Serial numbers 802-0060 and subsequent  have a improved design. Additional information regarding this issue can be found in Service Letter #186.</p>
