--- a/html/Maintenance/Rudder Trim Controls.html
+++ b/html/Maintenance/Rudder Trim Controls.html
@@ -1,3 +1,11 @@
-<p>The rudder trim controls in the cockpit are shown in <xref fileTarget="img_Fig_6.png" xrefType="link">Fig Cross Reference</xref>.  Rudder trim is controlled by a horizontal handwheel on the left-hand wall of the cockpit. This handwheel is pushrod connected to a Quadra-Stat sector level in the aft fuselage. The Quadra-Stat is a positioning sector that provides a friction lock at the position selected by the control lever. The Quadra-Stat is shown in Figure 8. If the rudder trim slips in flight, the friction screws may be tightened to prevent this. </p>
+<p>The rudder trim controls in the cockpit are shown in <xref fileTarget="img_Fig_6.png" xrefType="link">Fig Cross Reference</xref>.  Rudder trim is controlled by a horizontal handwheel on the left-hand wall of the cockpit. This handwheel is pushrod connected to a Quadra-Stat sector level in the aft fuselage. The Quadra-Stat is a positioning sector that provides a friction lock at the position selected by the control lever. The Quadra-Stat is shown in 
+    <xref fileTarget="img_Fig_8.png"></xref>
+    . 
+    If the rudder trim slips in flight, the friction screws may be tightened to prevent this. </p>
+
+<figure>
+    <img class="imageCentered_3x5" src="img/img_Fig_8.png">
+    <figcaption class="centerText">Rudder Trim Quadra-Stat</figcaption>
+</figure>
 
 <p>The Quadra-Stat output arm is connected via pushrods to the idler block that is positioned on the right-hand face of the fin's rear spar, just below the horizontal stabilizer. Dual rods attached to the arms of this idler progress aft to their attachments to the rudder tab. </p>
