trying to make this section make sense

--- a/html/Maintenance/MAIN AND TAIL GEAR ATTACH BOLTS.html
+++ b/html/Maintenance/MAIN AND TAIL GEAR ATTACH BOLTS.html
@@ -41,7 +41,7 @@
     <figcaption class="centerText">Main Gear Attach Bolts</figcaption>
 </figure>
 
-<p>Bolt part numbers vary as shown below:</p>
+<p>Bolt part numbers are as shown below:</p>
 
 <table class="plainTableMedium">
     <tr>
@@ -50,20 +50,18 @@
     </tr>
     <tr>
         <td class="plainTableNormalCell">Fwd Main Gear Clamp Block Bolt</td>
-        <td class="plainTableNormalCell">NAS156-130 - XXXXX or NAS156A130 - XXXXX</td>
+        <td class="plainTableNormalCell">NAS156-129 - NAS156-130 or NAS156A129 - NAS156A130</td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">Aft Main Gear Clamp Block Bolt</td>
-        <td class="plainTableNormalCell">NAS154DH59 - XXXXX</td>
+        <td class="plainTableNormalCell">NAS154DH59</td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">Inbd Main Gear Large Bolt</td>
-        <td class="plainTableNormalCell">NAS158A106 - XXXXX</td>
+        <td class="plainTableNormalCell">NAS158A106</td>
     </tr>
 </table>
-<p>If you are just replacing bolts, you should be able to replace with the same length.  Contact Air Tractor customer service for advice and parts.</p>
-
-
+<p>For the clamp bolts, if you are not also replacing the spring, you should be able to use bolts with the same length.  Contact Air Tractor customer service for advice and parts.</p>
 
 
 <p><b>Main Gear Axle Attach Bolts</b></p>
