--- a/html/Maintenance/Main Gear Spring.html
+++ b/html/Maintenance/Main Gear Spring.html
@@ -5,35 +5,33 @@
     <figcaption class="centerText">Main-Gear Spring</figcaption>
 </figure>
 
-<p>The inboard attachment of the spring to the fuselage frame is with a NAS158A106 bolt, MS20002C18 washer under the bolt head (be sure the chamfered side of the washer is next to the head), one or more MS20002-18 washers under the nut, AN310-18 nut, and MS24665-360 cotter. The bolt is installed upside down and torque should be 7,000 inch-pounds (torque wrench on bolt head). A simple adapter for your torque wrench is a short piece of 1 1/8" hex stock to enter the bolt head, and a 1 1/8" socket for your torque wrench. </p>
+<p>The gear spring is clamped to the fuselage frame with a p/n40145-1 clamp block with one NAS156A130 bolt and one NAS154DH59 bolt. MS20002C14 washers go under the aft bolt head and MS20002C16 washers go under the forward bolt head (Make sure the chamfered side of the washer is under the bolt head). Various numbers of 3088A325 round shim washers go between the clamp block and fuselage frame at the aft bolt location. The fwd bolt uses p/n3088A326 shims. The shims are selected to allow the bolts to be fully torqued without bending the clamp block. The 3088A shims are .010 thick. If too many thick shims are used the gear connection will be too loose and will rattle during taxi or landing. If the gear leg becomes loose during service even though the clamp block bolts are at full torque it is necessary to re-shim the clamp block. </p>
+
+<p>The inboard attachment of the spring to the fuselage frame is with a NAS158A106 bolt, MS20002C18 washer under the bolt head (be sure the chamfered side of the washer is next to the head), one or more MS20002-18 washers under the nut, AN310-18 nut, and MS24665-360 cotter. The bolt is installed upside down and torque should be 7,000 inch-pounds (torque wrench on bolt head).  If after torquing, you are unable to install cotter, tighten until the next castellation aligns, not to exceed an additional 60°</p>
 
 <p>It is necessary to hoist the aircraft as described under <xref sectionTarget="2.0.4" prependLabel="Section"></xref> when changing the inboard bolt. Be sure to grease the bolt with general purpose grease before installing. Also, be sure the bolt is marked R on the head to indicate the threads were rolled after heat-treat. </p>
 
-<p>The gear spring is clamped to the fuselage frame with a p/n40145-1 clamp block with one NAS156A130 bolt and one NAS154DH59 bolt. MS20002C14 washers go under the aft bolt head and MS20002C16 washers go under the forward bolt head (Make sure the chamfered side of the washer is under the bolt head). Various numbers of 3088A325 round shim washers go between the clamp block and fuselage frame at the aft bolt location. The fwd bolt uses p/n3088A326 shims. The shims are selected to allow the bolts to be fully torqued without bending the clamp block. The 3088A shims are .010 thick. If too many thick shims are used the gear connection will be too loose and will rattle during taxi or landing. If the gear leg becomes loose during service even though the clamp block bolts are at full torque it is necessary to re-shim the clamp block. </p>
 
-<p>For serial numbers -0001 thru -0140 (excluding -0124 thru -0128 and -0130 thru -0132). Air Tractor now uses an upgraded nut to on the outboard forward main landing gear bolt. The new nuts improve the tensile strength of this bolt connection.
-</p>
 
-<p>We recommend changing these nuts at your next service period or next inspection. Remove the old style nuts and replace them with the new style nuts. Torque the bolts to to 500 ft. lbs. (Torque wrench on the head of the bolt).</p>
 
 <p>The method employed at the factory to determine the amount of shims required is to install the clamp block and fully torque the bolts before installing the large inboard bolt. The block is checked for straightness with a small straight edge (a six-inch steel scale is OK) to be sure the block is not bent by not having sufficient shims. Then the gear leg is grasped at the lower end, given an outboard tug by hand. A moderate tug should move the inboard end of the leg down from the attach bushing in the fuselage frame a distance 1/8" to 1/4". If it is a greater distance than 1/4" the connection is too loose, and a thinner shim is tried and the process repeated. Once the proper shims are determined, the bolts are loosened and the large inboard bolt is installed. Then the clamp block bolts are tightened to full torque (4,000 inch-pounds on aft bolt, 6,000 inch-pounds on fwd bolt). </p>
 
-<p>An adapter for your torque wrench may be made from a short piece of 7/8" hex stock to enter the aft bolt head, and a 7/8" socket for the torque wrench. Be sure to grease the bolts before installing. The clamp block bolts should also have the letter R stamped on the head to indicate the threads were rolled after heat-treat. 1.0" Hex stock is used for the forward bolt head. </p>
-
-<p>If an obstruction is hit with the main gear, change the forward clamp bolt immediately and check the clamp block for straightness. The forward clamp bolt can be changed without hoisting the aircraft. The parking brake should be set, and use care so as not to disturb the shims that are in place. </p>
 
 <p>Since each main gear leg is slightly different in thickness, and since each clamp block is machined within a specific tolerance, it is necessary to make a shim selection as described earlier, if either the gear leg or the clamp block is changed. </p>
 
-<p>As in the case of the tail gear spring, the main gear spring will fatigue and break at some point in the life of the aircraft. Again, the number of hours before failure will vary considerably as some operators make more landings per hour than others, or carry heavier loads, or operate form very rough strips. Pilot technique is again a factor, as some pilots are very rough on airplanes. See the <xref sectionTarget="6.2" prependLabel="Section"></xref> for the fatigue life of the main gear springs. </p>
+<p>When ordering new main gear springs or clamp blocks also order 4 ea. 3088A325 and 4 ea. 3088A326 shims in case they are needed. In addition, the large aluminum tapered shims at the axle attachment might need an addition or change so it would be a good idea to order 2 ea. 4040141-3 shims and 2 ea 40114-2 shims in case they are needed. Whenever the airplane is ground-looped or involved in an incident that puts a permanent bend in one gear spring, the other spring must be changed as it may have been overstressed. </p>
 
-<p>The service life of the 1.56-inch thick main gear legs has been lowered to 2,500 landings or 1,000 hours, whichever comes first for operators with rough-strips, and 3,000 landings or 1,200 hours, whichever comes first, for operators working from smooth sod or paved landing sites.</p>
 
-<p>The 1.56-inch thick landing gears were heat treated to a higher ultimate tensile stress in order to qualify them for a 16,000 pound landing weight. This higher-than-normal heat treat has made them more brittle and less forgiving of surface imperfections such as rust than gears used on other Air Tractor models.</p>
-
-<p>When the main gear springs are changed, use new bolts and nuts at all locations. The axle attach bolts are NAS148-70, -72, or -74. Install the springs to the fuselage in accordance with the instructions in this section, and install the axles to the spring using the procedure to check camber and toe-in outlined in <xref sectionTarget="2.90.3" prependLabel="Section"></xref>
+<p>When the main gear springs are changed, use new bolts and nuts at all locations.  Install the springs to the fuselage in accordance with the instructions in this section, and install the axles to the spring using the procedure to check camber and toe-in outlined in <xref sectionTarget="2.90.3" prependLabel="Section"></xref>
 
 </p> Be sure to make log book entries when bolts or gear springs are changed. </p>
 
-<p>When ordering new main gear springs or clamp blocks also order 4 ea. 3088A325 and 4 ea. 3088A326 shims in case they are needed. In addition, the large aluminum tapered shims at the axle attachment might need an addition or change so it would be a good idea to order 2 ea. 4040141-3 shims and 2 ea 40114-2 shims in case they are needed. Whenever the airplane is ground-looped or involved in an incident that puts a permanent bend in one gear spring, the other spring must be changed as it may have been overstressed. </p>
 
-<p>A very detailed description of the removal, installation and alignment of the main gear struts and wheels may be found in Service Letter #151.</p>
+<p>For more information on main landing gear installation, see Service Letter 151 for very detailed description of the removal, installation and alignment of the main gear spring and wheels.</p>
+
+<p><b>Obstruction Collision</b></p>
+<p>If an obstruction is hit with the main gear, change the forward clamp bolt immediately and check the clamp block for straightness per <xref sectionTarget="2.90.50" prependLabel="Section"></xref>. The forward clamp bolt can be changed without hoisting the aircraft. The parking brake should be set, and use care so as not to disturb the shims that are in place. </p>
+
+
+
+
