--- a/html/Maintenance/CONTROL SURFACE UNBALANCE LIMITS.html
+++ b/html/Maintenance/CONTROL SURFACE UNBALANCE LIMITS.html
@@ -20,3 +20,5 @@
     <p>Rudder</p>
     <p class="tabOver">22.25 inch-lbs</p>
 </div>
+
+<p>If the unbalance exceeds the limits above, you will likely need to strip and re-paint (especially if the surface has been painted multiple times) or check the counterweights.  Contact Air Tractor Customer Service for more information and assistance.</p>
