--- a/html/Maintenance/Hopper Gate Box and Adapter.html
+++ b/html/Maintenance/Hopper Gate Box and Adapter.html
@@ -25,7 +25,7 @@
         </tr>
     </table>
 
-<p>Gaskets for both should be replaced when either is removed. The original and new gaskets should not be mixed when replacing. Gaskets for the adapter to gate box connection are Transland p/n 60227 (2 ea.) and 60725 (2 ea.). Bolts for attaching the adaptor to the hoppers are stainless 1.0 inch long p/n 91246A542. Bolts for the gate box attach are 5/8 long p/n 91246A539. These bolts are installed with AN960C416 washers and MS21044C4 nuts. Gaskets should be sealed on both sides with PR1422-B2. Bolt torque is 150 inch-pounds. </p>
+<p>Gaskets for both should be replaced when either is removed. The original and new gaskets should not be mixed when replacing. Gaskets for the adapter to gate box connection are Transland p/n 60227 (2 ea.) and 60725 (2 ea.) or Air Tractor p/n 82266-1 and 82262-1. Bolts for attaching the adaptor to the hoppers are stainless 1.0 inch long p/n 91246A542. Bolts for the gate box attach are 5/8 long p/n 91246A539. These bolts are installed with AN960C416 washers and MS21044C4 nuts. Gaskets should be sealed on both sides with PR1422-B2. Bolt torque is 150 inch-pounds. </p>
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_56.png">
