--- a/html/Maintenance/Hopper Tanks.html
+++ b/html/Maintenance/Hopper Tanks.html
@@ -11,7 +11,7 @@
     <li>Remove the fuselage side skins on both sides of the hopper tank. </li>
     <li>If the front hopper is to be removed, remove the upper engine cowl skins.</li>
     <li>Remove the hopper lid.</li>
-    <li>If the rear hopper is to be removed, remove the windshield and rear hopper-to-fuselage fairings.</li>
+    <li>If the rear hopper is to be removed, remove the windshield per <xref sectionTarget="2.80.5" prependLabel="Section"></xref> and rear hopper-to-fuselage fairings.</li>
     <li>Remove the wide stainless-steel band that connects the hopper tanks beneath the hopper lid.</li>
     <li>Using a chain hoist with 2 X 6 board across the bottom of the hopper throat, apply slight upward pressure to relieve load on hopper supports.</li>
     <li>Remove all bolts from the hopper supports and braces that secure the hopper tank to the fuselage structure. Movement of the chain hoist will be necessary to relieve the load on the attaching bolts.</li>
