--- a/html/Maintenance/Bottom - Load Plumbing.html
+++ b/html/Maintenance/Bottom - Load Plumbing.html
@@ -1,4 +1,4 @@
-<p>Details of the bottom-load plumbing are shown below in <xref fileTarget="img_Fig_65.png" xrefType="link">Fig Cross Reference</xref>.   Bottom load valves are 3-inch and are located on both sides of the aircraft. These are Agrinautics p/n 79410 and 79450.  The aft half of the bottom load plumbing is a 3-inch “Y" assembly and is p/n 80558-1. The forward tube is p/n 80555-1. </p>
+<p>Details of the bottom-load plumbing are shown below in <xref fileTarget="img_Fig_65.png" xrefType="link">Fig Cross Reference</xref>.   Bottom load valves are located on either the left side or both sides of the aircraft. These are Agrinautics p/n 79410 and 79450.  The aft half of the bottom load plumbing is a 3-inch “Y" assembly and is p/n 80558-1. The forward tube is p/n 80555-1. </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_65.png">
