--- a/html/Maintenance/Spray Pump.html
+++ b/html/Maintenance/Spray Pump.html
@@ -1,4 +1,4 @@
-<p>The spray pump is an Agrinautics p/n 65715 attached to an Agrinautics p/n 60130 strut assembly with AN5-12A bolts. </p>
+<p>The factory supplied spray pump is an Agrinautics p/n 65715 attached to an Agrinautics p/n 60130 strut assembly with AN5-12A bolts. </p>
 
 <p>The standard fan is the Micronair AT-4300 five-blade fan, which is used for low-to-moderate spray volume. For high-volume applications, install the Arrowprop A2-AT4T34 four-blade fan or the Weathaero FA100 fan. Add 48 nozzles to spray booms and change the spray tips on the spray nozzles to larger ones. <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> below shows some typical spray configurations, as well as a chart of available flat fan spray tips. <xref fileTarget="img_Fig_63.png" xrefType="link">Fig Cross Reference</xref> shows the orifice size and flow rate of the various tips at common spray pressures. </p>
 
@@ -15,7 +15,7 @@
          <li>Remove fan pitch-control cable or brake-control cable. </li>
          <li>Loosen the hose coupling that secures the pump inlet line to the pump.</li>
          <li>Loosen the hose coupling that secures the pump outlet port to the spray valve line.</li>
-         <li>Release the latches on the Agrinautics strut assembly and remove the pump and fan.</li>
+         <li>Release the latches on the strut assembly and remove the pump and fan.</li>
     </ol>
         <p>or</p>
     <ol type="1">
