--- a/html/Maintenance/Charging System Troubleshooting.html
+++ b/html/Maintenance/Charging System Troubleshooting.html
@@ -25,7 +25,7 @@
     </li>
     <li>
         GCU Breakout Box- This is not absolutely essential but it is very effective in localizing many problems. 
-        It can be fabricated per <xref fileTarget="img_Fig_45.png" xrefType="link">Fig Cross Reference</xref> below or it is available from your dealer at a reasonable price
+        It can be fabricated per <xref fileTarget="img_Fig_45.png" xrefType="link">Fig Cross Reference</xref> below or it is available from your dealer.
     </li>
 </ul>
 <figure>
@@ -39,9 +39,7 @@
 <p>
     Before going into specific symptoms, which will result in, operational squawks it is productive to 
     point out a static test routine that is quick and easy and will result in localizing some problems without starting 
-    the engine. This procedure entails removing the connector from the GCU and checking with the ohmmeter fro 
-    designated sockets in test leads will usually have a small resistance, about .1 to .4 ohms, so before starting, 
-    short the probes together and get this reading. Subtract this reading from all point to point readings.
+    the engine.
 </p>
 
 <p>Set Master Switch to OFF and Generator Switch to ON and check the following:</p>
