--- a/html/Maintenance/Cockpit Lighting.html
+++ b/html/Maintenance/Cockpit Lighting.html
@@ -37,18 +37,19 @@
     necessary repairs to the wiring. Use the Volt meter to check the voltage at the B terminal of the transistor. This
     voltage should vary from 0 to bus level when the control knob is turned. </p>
 
-<p>If the voltage is not proper at the B terminal, remove the transistor and recheck the voltage at the B terminal of
+<p>
+    If the voltage is not proper at the B terminal, remove the transistor and recheck the voltage at the B terminal of
     the transistor socket. To remove the transistor from the socket, remove the two screws holding it to the heat sink.
     Pull the transistor out of the socket. If the voltage is still not proper at the B terminal, the variable resistor
     (P/N RV4NAYSD-102A) is bad or has a bad ground. If the voltages to the B and C terminal of the transistor are good
     and the dimmer does not work, the transistor is bad. To install a new transistor (P/N 2N3055), coat the bottom of
     the transistor with a thin coat of heat-sink compound. Insert the mica insulator over the two transistor leads and
-    stick it to the heat-sink compound. Coat the bottom of the mica insulator with a thin coat of heat-sink compound.
-    White heat-sink compound can be obtained at most Radio Shack or electronic supply stores. Most Radio Shack stores
-    also stock the 2N3055 transistor. Plug the transistor through the heat sink and into the socket. Install the screws
+    stick it to the heat-sink compound (thermal paste). Coat the bottom of the mica insulator with a thin coat of heat-sink compound.
+    Plug the transistor through the heat sink and into the socket. Install the screws
     that were removed. Make sure that the shoulders of the transistor-socket-screw holes seat properly in the heat-sink
     holes. The case of the transistor is one of the electrical connections of the transistor, and must not be grounded
     to the heat sink or the aircraft. If the case is shorted to ground, with the power on, the transistor will be
     ruined. Once the wires have been reconnected and the unit is working properly, mount the heat sink to the lower
     panel and secure any loose wires as necessary. Double check the operation of the unit before fastening the lower
-    panel and returning the aircraft to service. </p>
+    panel and returning the aircraft to service. 
+</p>
