--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -1,4 +1,7 @@
-<p>Air Tractor recommends that the parts listed in this section are replaced or overhauled at the intervals shown.</p>
+<p>
+    Air Tractor recommends that the parts listed in this section are replaced or overhauled at the intervals shown.
+    If you are maintaining your airplane in accordance with 14 CFR 
+</p>
 <table class="plainTableLarge">
     <tr>
         <th class="plainTableHeaderCell">Part Number</th>
@@ -11,6 +14,12 @@
         <td class="plainTableNormalCell">Overhaul Flap Actuator</td>
         <td class="plainTableNormalCell">400 Hours</td>
         <td class="plainTableNormalCell">SIL 802-0021A, SIL 802-0050</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">71112-1</td>
+        <td class="plainTableNormalCell">Overhaul Flap Actuator</td>
+        <td class="plainTableNormalCell">1500 Hours</td>
+        <td class="plainTableNormalCell"><xref sectionTarget="2.70.11" prependLabel="Section"></xref></td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">NAS156-130**</td>
@@ -71,17 +80,5 @@
         <td class="plainTableNormalCell">Air Filter (XFlow)</td>
         <td class="plainTableNormalCell">15 Cleaning and Oiling Cycles</td>
         <td class="plainTableNormalCell">OM Supplement 04-0167, <xref sectionTarget="2.50.50" prependLabel="Section">Cross Reference Placeholder</xref></td>
-    </tr>
-    <tr>
-        <td class="plainTableNormalCell">510226-401</td>
-        <td class="plainTableNormalCell">Amsafe Inflator</td>
-        <td class="plainTableNormalCell">10 Years</td>
-        <td class="plainTableNormalCell"><xref sectionTarget="2.20.2" prependLabel="Section"></xref></td>
-    </tr>
-    <tr>
-        <td class="plainTableNormalCell">510184-401</td>
-        <td class="plainTableNormalCell">Amsafe Inflator</td>
-        <td class="plainTableNormalCell">10 Years</td>
-        <td class="plainTableNormalCell"><xref sectionTarget="2.20.2" prependLabel="Section"></xref></td>
     </tr>
 </table>
