--- a/html/Maintenance/Stall-Warning Horn.html
+++ b/html/Maintenance/Stall-Warning Horn.html
@@ -1,4 +1,4 @@
-<p>The wiring schematic for the stall warning horn is shown in <xref fileTarget="StallWarningSwitchSch.png" xrefType="link">Fig Cross Reference</xref> below. The horn is connected in series with the lift-detector switch that is located near the leading edge of a mid-span of the right-hand wing. </p>
+<p>The wiring schematic for the stall warning horn is shown in <xref fileTarget="StallWarningSwitchSch.png" xrefType="link">Fig Cross Reference</xref> below. The horn is connected in series with the lift-detector switch that is located near the leading edge of a mid-span of the left-hand wing. </p>
 <figure>
     <img class="imageCentered_6x4" src="img/StallWarningSwitchSch.png">
     <figcaption class="centerText"> Wiring Schematic- Fuel/ Flaps/ Horn</figcaption>
