--- a/html/Maintenance/Starter Generator Brush Inspection.html
+++ b/html/Maintenance/Starter Generator Brush Inspection.html
@@ -22,13 +22,11 @@ flow to travel through one brush), heavy electrical loads, brush
 type, and variations in brush block spring tension.
 </p>    
 <p>
-For these reasons, Air Tractor recommends a brush check to be 
-performed every 300 hours. Along with the brush check, a 
-thorough inspection and cleaning of the starter generator should 
-be accomplished. The following is provided as a general guide to 
-perform the inspection. For specific instructions and inspection 
-criteria, see the latest revision of the starter generator 
-maintenance manual. 
+    For these reasons, Air Tractor recommends periodic brush checks 
+    <xref sectionTarget="3.1.12" prependLabel="Section"></xref>. Along with the brush check, a 
+    thorough inspection and cleaning of the starter generator should 
+    be accomplished. The following is provided as a general guide to 
+    perform the inspection.
 </p>
 
 <p><b>Procedure</b></p>
