--- a/html/Maintenance/Hopper Rinse System.html
+++ b/html/Maintenance/Hopper Rinse System.html
@@ -1,3 +1,3 @@
-<p>During the course of filling the hopper full, or near full, it may be possible to force chemical through the rinse spray nozzles and into the rinse tank. To prevent this from happening a check valve is installed in the pump discharge line. </p>
-<p>A change was incorporated in the design of the system to incorporate a spring loaded check valve. We believe that a spring loaded check valve will provide better protection from chemical back flow. We urge you to check and potentially change the check valve in your hopper rinse system.</p>
-<p>More information may be found in Service Letter #142.</p>
+<p>
+    During the course of filling the hopper full, or near full, it may be possible to force chemical through the rinse spray nozzles and into the rinse tank. To prevent this from happening a check valve is installed in the pump discharge line. 
+</p>
