--- a/html/Maintenance/Minimizing Spray System Corrosion.html
+++ b/html/Maintenance/Minimizing Spray System Corrosion.html
@@ -1,12 +1,20 @@
 <p>In order to minimize the effects of corrosion on your spray system, it is recommended that you drain, flush and circulate a 50/50 mix of antifreeze and water through your system at the end of the spray season.  Off season corrosion can damage the spray pump, valves, booms and nozzles. </p>
 
-<p>Spray pump – Corrosion damage to the spray pump can include deterioration of the impeller and impeller housing.  This deterioration creates too much clearance between the impeller and the housing, thus causes the product you are attempting to spray to be recirculated rather than being delivered to the spray valve as intended. </p>
+<ul>
+    <li>
+        Spray pump - Corrosion damage to the spray pump can include deterioration of the impeller and impeller housing.  This deterioration creates too much clearance between the impeller and the housing, thus causes the product you are attempting to spray to be recirculated rather than being delivered to the spray valve as intended. 
+    </li>
+    <li>
+        Valves - The nylon seals and the chrome and aluminum surfaces that the seals contact in loading and spray valves corrode and deteriorate.  As these materials deteriorate, the seals lose their effectiveness.
+    </li>
+    <li>
+        Booms - Corrosion of the aluminum alloy deteriorates the metal and leaves a granular residue.
+    </li>
+    <li>
+        Nozzles - Like the rest of the system, nozzles are also subject to corrosion and deterioration.  Another major issue with nozzles is that they can be plugged with the granular residue left behind from the deterioration of other system components.
+    </li>
+</ul>
 
-<p>Valves – The nylon seals and the chrome and aluminum surfaces that the seals contact in loading and spray valves corrode and deteriorate.  As these materials deteriorate, the seals lose their effectiveness. </p>
-
-<p>Booms – Corrosion of the aluminum alloy deteriorates the metal and leaves a granular residue. </p>
-
-<p>Nozzles – Like the rest of the system, nozzles are also subject to corrosion and deterioration.  Another major issue with nozzles is that they can be plugged with the granular residue left behind from the deterioration of other system components. </p>
 
 <p>When the 50/50 mix of antifreeze and water is drained from the system at the beginning of the next spray season, it can be saved to use for the next off-season. </p>
 
