--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -32,7 +32,7 @@
     filter. These fuel filters use the Air Tractor p/n 52351-1 fuel filter element. Inspection and maintenance
     procedures for the fuel filters are almost identical. The filter should be cleaned and inspected for general
     condition every 100 hours TIS. The procedure below is a comprehensive procedure that specifies where each filter is
-    different from the others. The maintenance and inspections below were preciously included in Service letters SL229
+    different from the others. The maintenance and inspections below were previously included in Service letters SL229
     and SL229A.
 </p>
 
