--- a/html/Maintenance/Oil Requirements.html
+++ b/html/Maintenance/Oil Requirements.html
@@ -18,8 +18,8 @@
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">NOTE</p>
-    <p class="boxCautionLargeText">For all PT6A-65 series eingines installed on the AT-802 aircraft, when performing motoring compressor runs of the engine such as for a compressor wash and/or a turbine wash, the main oil pressure pump can supply more oil to the engine than the oil scavenge pumps can return to the main oil tank.</p>
-    <p class="boxCautionLargeText">This can lead to engine oil failing the AGB (Accessory Gear Box) to a level high enough for the oil to drain overboard via the high-pressure fuel-pump drain.</p>
+    <p class="boxCautionLargeText">For all PT6A-65 series engines installed on the AT-802 aircraft, when performing motoring compressor runs of the engine such as for a compressor wash and/or a turbine wash, the main oil pressure pump can supply more oil to the engine than the oil scavenge pumps can return to the main oil tank.</p>
+    <p class="boxCautionLargeText">This can lead to engine oil filling the AGB (Accessory Gear Box) to a level high enough for the oil to drain overboard via the high-pressure fuel-pump drain.</p>
     <p class="boxCautionLargeText">This should not be a cause for concern; once the engine is started and run at idle for several moments, the oil in the AGB will be scavenged back into the oil tank. After the engine is shut down, the oil level should be checked within 10 minutes and the oil level restored to its normal range.</p>
     <p class="boxCautionLargeText">This situation will not have any effect on normal engine operation.</p>
 </div>
