--- a/html/Maintenance/Battery Removal and Replacement.html
+++ b/html/Maintenance/Battery Removal and Replacement.html
@@ -14,5 +14,5 @@
 <p>Replacement of the batteries may be accomplished by reversing the steps for removal listed above. </p>
 <div class="boxWarningMedium">
     <p class="boxWarningMediumHeader">WARNING</p>
-    <p class="boxWarningMediumText">All of the batteries are connected in parallel. The positive lead from any batter is HOT even if it and its associated ground lead are disconnected from their battery. It is vital that <u>all</u> ground leads are disconnected first and re-connected last when batteries are removed and replaced. Fire, explosion, and personal injury are possible if this precaution is not observed.</p>
+    <p class="boxWarningMediumText">All of the batteries are connected in parallel. The positive lead from any battery is HOT even if it and its associated ground lead are disconnected from their battery. It is vital that <u>all</u> ground leads are disconnected first and re-connected last when batteries are removed and replaced. Fire, explosion, and personal injury are possible if this precaution is not observed.</p>
 </div>
