--- a/html/Maintenance/Rudder Trim Tab.html
+++ b/html/Maintenance/Rudder Trim Tab.html
@@ -1,4 +1,4 @@
-<p>The rudder trim tab is also used as a boot tab to reduce pedal forces in normal flight. The tab is made of a single skin wrapped around a welded-spar-and-rib frame. The tab is controlled by a single control arm on its right-hand side. This arm has threaded 10-32 studs both sides to attach the two control rods. The tab installation is shown below in <xref fileTarget="img_Fig_55.png" xrefType="link">Fig Cross Reference</xref>.</p>
+<p>The rudder trim tab is also used as a boost tab to reduce pedal forces in normal flight. The tab is made of a single skin wrapped around a welded-spar-and-rib frame. The tab is controlled by a single control arm on its right-hand side. This arm has threaded 10-32 studs both sides to attach the two control rods. The tab installation is shown below in <xref fileTarget="img_Fig_55.png" xrefType="link">Fig Cross Reference</xref>.</p>
 
 <figure>
     <img class="imageCentered_3x5" src="img/img_Fig_55.png">
