--- a/html/Maintenance/Starter Generator Installation.html
+++ b/html/Maintenance/Starter Generator Installation.html
@@ -12,7 +12,7 @@
         free of burrs.
     </li>
     <li>
-        The QAD pad is properly secured to the engine.
+        The QAD pad is properly secured to the engine.  Check for at least 1 full thread protruding through the QAD nuts.  Use AN960-516L skinny washers instead of supplied MS9321-11 washers supplied with the engine if required. 
     </li>
     <li>
         The QAD pad guide pin holes are free of burrs, foreign objects and in good 
