--- a/html/Maintenance/Altimeter - Static System.html
+++ b/html/Maintenance/Altimeter - Static System.html
@@ -24,7 +24,7 @@
     Pitot
     tube on the AT-802A is under the left hand wing. For the two seater AT-802-2, the pitot and static probe is in the
     leading edge of the left hand wing.
-    The probe on the AT-802-2 will require and adapter to connect vacuum port. 
+    The probe on the AT-802-2 will require an adapter to connect vacuum port. 
     To maintain compliance with part 91.411,
     use Appendix E to part 43 which outlines the procedures for performing the altimeter systems test and inspection for the transponder.
 </p>
