--- a/html/Maintenance/Corrosion Inspection.html
+++ b/html/Maintenance/Corrosion Inspection.html
@@ -1,4 +1,4 @@
-<p>Corrosion has been found in the area between and around the lower spar cap and spice block junction. Severe corrosion has also been found in several places along the spar caps including extreme corrosion in the vicinity of the aileron push-rod at the aileron. If corrosion is expected, the following steps should be taken:</p>
+<p>Corrosion has been found in the area between and around the lower spar cap and splice block junction. Severe corrosion has also been found in several places along the spar caps including extreme corrosion in the vicinity of the aileron push-rod at the aileron. If corrosion is expected, the following steps should be taken:</p>
 
 <ol type="1">
     <li>Inspect Wing Spar Caps</li>
