--- a/html/Maintenance/Tail Wheel Lock Pin and Housing.html
+++ b/html/Maintenance/Tail Wheel Lock Pin and Housing.html
@@ -224,7 +224,7 @@
         <div class="boxCautionMedium">
             <p class="boxCautionMediumHeader">Caution</p>
             <p class="boxCautionMediumText">
-                Failure to properly torque jam nuts sand install safety wire may result in the loss of desired
+                Failure to properly torque jam nuts and install safety wire may result in the loss of desired
                 adjustment setting.
             </p>
         </div>
