--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -67,13 +67,13 @@
         <td class="plainTableNormalCell">AN47-30A</td>
         <td class="plainTableNormalCell">Horizontal Stabilizer Eyebolts (thru S/N 802-0188)</td>
         <td class="plainTableNormalCell">1350 Hours</td>
-        <td class="plainTableNormalCell">SL129</td>
+        <td class="plainTableNormalCell">SL129, <xref sectionTarget="2.45.1" prependLabel="Section"></xref></td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">30775-1</td>
         <td class="plainTableNormalCell">Horizontal Stabilizer Eyebolts (S/N 802-0189 and SUBS and those modified IAW SL 129A)</td>
         <td class="plainTableNormalCell">3000 Hours</td>
-        <td class="plainTableNormalCell">SL129</td>
+        <td class="plainTableNormalCell">SL129, <xref sectionTarget="2.45.1" prependLabel="Section"></xref></td>
     </tr>
     <tr>
         <td class="plainTableNormalCell">53474-1</td>
