--- a/html/Maintenance/Horizontal Stabilizers.html
+++ b/html/Maintenance/Horizontal Stabilizers.html
@@ -1,11 +1,6 @@
 <p>
     The details of the horizontal stabilizer are shown below in <xref fileTarget="img_Fig_66.png" xrefType="link">Fig Cross Reference</xref>. The horizontal stabilizers require very little
-    maintenance as they are composed of metal. They are attached to the fuselage frame with two AN5-7A bolts, which have a
-    washer under the head, and two under the nut. On 12-month inspections the gap cover should be removed from the
-    stabilizer and the bolt condition and torque checked. At the same time inspect the fuselage fittings closely for
-    cracks. Torque is 200 inch-pounds at the nut. The gap covers are attached with 90008-1 stainless self-tapping screws
-    which are Phillips truss head #4x1/4" long. A No. 39 hole is drilled for the screw installation. The Cessna S202VW rubber
-    channel is attached with 3-M 8001 Adhesive.
+    maintenance as they are composed of metal.  The stabilizer is sealed on the ends with PR-1422 A2 to prevent chemical entry.
 </p>
 
 <figure>
@@ -13,11 +8,87 @@
     <figcaption class="centerText">Horizontal Stabilizer</figcaption>
 </figure>
 
-<p>For serial numbers -0284 thru -0319, there have been two reports that the elevator center bearing support broke off of the bracket assembly. If your aircraft has not already installed an improved version, refer to Service Letter #285 for further information.</p>
+<p><b>Attachment Bolts</b></p>
+<p>    
+    Until 1997, the horizontal stabilizers were attached to the fuselage frame with two AN5-7A bolts.   
+</p>
+<p>
+    Since, the horizontal stabilizers are attached with NAS6605 bolts, MS20002-5 washers and ESNA F52N1610-054 nuts
+    as shown in
+    <xref fileTarget="img_HorizontalStabAttachmentFwd.png"></xref> and
+    <xref fileTarget="img_HorizontalStabAttachmentFwd.png"></xref>
+    .  Torque is 17 ft-lb (204 in-lb) on the nut.
+</p>
+<figure>
+    <img class="imageCentered_4x4" src="img/img_HorizontalStabAttachmentFwd.png">
+    <figcaption class="centerText">Horizontal Stabilizer Attachment - Forward</figcaption>
+</figure>
+<figure>
+    <img class="imageCentered_4x4" src="img/img_HorizontalStabAttachmentAft.png">
+    <figcaption class="centerText">Horizontal Stabilizer Attachment - Aft</figcaption>
+</figure>
+
+<p>    
+    On 12-month inspections the gap cover should be removed from the
+    stabilizer and the bolt condition and torque checked. At the same time inspect the fuselage fittings closely for
+    cracks. 
+</p>
+
+<p><b>Eyebolts</b></p>
+<p>
+    Two eyebolts are installed inside the stabilizer for attachment of the struts.  Through SN 802A-0188, these eyebolts were AN47-30A.  They were then changed to 30775-1 with MS20002-9 washers and AN365-918 nuts.  See SL129 for modification instructions to the newer configuration with longer life.
+</p>  
+<figure>
+    <img class="imageCentered_5x4" src="img/img_HorizontalStabEyeboltFwd.png">
+    <figcaption class="centerText">Horizontal Stabilizer Eyebolt - Forward</figcaption>
+</figure>
+<figure>
+    <img class="imageCentered_5x4" src="img/img_HorizontalStabEyeboltAft.png">
+    <figcaption class="centerText">Horizontal Stabilizer Eyebolt - Aft</figcaption>
+</figure>
 
 <p>
-    The stabilizer is sealed on the ends with PR-1422 A2 to prevent chemical entry.
+    Replacement intervals for these eyebolts are provided in <xref sectionTarget="2.200.1" prependLabel="Section"></xref> which are the same as those provided in SL129.  Torque and installation details are provided below.
 </p>
+
+<table class="plainTableLarge">
+    <tr>
+        <th class="plainTableHeaderCell">Serial Numbers</th>
+        <th class="plainTableHeaderCell">Eyebolt P/N</th>
+        <th class="plainTableHeaderCell">Torque on Nut</th>
+        <th class="plainTableHeaderCell">Washers</th>
+        <th class="plainTableHeaderCell">Nut P/N</th>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">Thru 802A-0188</td>
+        <td class="plainTableNormalCell">AN47-30A</td>
+        <td class="plainTableNormalCell">600 in-lb</td>
+        <td class="plainTableNormalCell">MS20002-7*</td>
+        <td class="plainTableNormalCell">AN365-820</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">802A-0189 and Subs and those modified IAW SL129A.</td>
+        <td class="plainTableNormalCell">30775-1</td>
+        <td class="plainTableNormalCell">1210 in-lb</td>
+        <td class="plainTableNormalCell">MS20002-9</td>
+        <td class="plainTableNormalCell">AN365-918</td>
+    </tr>
+</table>
+<p>If your aircraft is still equipped with AN47 eyebolts which originally used AN960 washers, it should be retrofitted with MS20002 washers per SL129B to avoid crushing of the washer.</p>
+
+
+
+
+
+
+<p><b>Gap Covers</b></p>
+<p>
+    The gap covers are attached with 90008-1 stainless self-tapping screws
+    which are Phillips truss head #4x1/4" long. A No. 39 hole is drilled for the screw installation. The Cessna S202VW rubber
+    channel is attached with 3-M 8001 Adhesive.
+</p>
+
+<p><b>Trim Controls</b></p>
 
 <p>
     There is a p/n 30602-1 (L/H) and 30602-2 (R/H) trim control idler attached to each stabilizer rear spar on the
@@ -35,6 +106,8 @@
     bushings. The bushing connections should be oiled regularly. 
 </p>
 
+<p><b>Abrasion Tape</b></p>
+
 <p>
-    3M 8671-3 Anti-abrasion tape is installed on the leading edge of the stabilizer.  This tape should be periodically checked for condition and replaced as required.
+    3M 8671-3 Anti-abrasion tape is installed on the leading edge of the stabilizer.  This tape should be periodically checked for condition and replaced as required.  It is permissible to operate without the tape but expect paint life to be decreased.
 </p>
