updated torque note

--- a/html/Maintenance/Horizontal Stabilizer Rigging.html
+++ b/html/Maintenance/Horizontal Stabilizer Rigging.html
@@ -22,7 +22,7 @@
     Adjust the terminal at the front eyebolt on each side so that the bolts can be inserted without causing a twist in
     the stabilizers. All bolts are now in place and it is necessary to re-check the hinge alignment from side to side,
     and re-check the stabilizer position with the wings. If all is still in order, install the washers and nuts on all
-    ten attach bolts (five each side). Torque the AN 5 (5/16") bolts to 200 inch-pounds on the nut and torque the AN6
+    ten attach bolts (five each side). Torque the fuselage attachment bolts to 200 inch-pounds on the nut and torque the AN6
     (3/8") bolts to 300 inch-pounds on the nut. Tighten the check nuts of each terminal to 290 inch-pounds torque.
     Insert a piece of safety wire in the small inspection hole at each terminal location to be sure the terminal is
     screwed into the strut fitting far enough.
