--- a/html/Inspection/Insp_EMPENNAGE.html
+++ b/html/Inspection/Insp_EMPENNAGE.html
@@ -54,7 +54,11 @@
     <td class="cellInspectionText">Visual inspection of the horizontal stabilizer auxiliary fin forward attachment (S/N
       -0001 through -0178) per Service Letter #232.</td>
   </tr>
-
+  <tr>
+    <td class="cellInspectionNumber">E10</td>
+    <td class="cellInspectionInterval">(100)</td>
+    <td class="cellInspectionText">Check elevator counterweight bolt for security. (Ref SL282)</td>
+  </tr>
 
 
   <tr>
