--- a/html/Maintenance/Elevator Removal.html
+++ b/html/Maintenance/Elevator Removal.html
@@ -40,8 +40,8 @@
 </ol>
 
 <p>
-    Now is a good time to inspect the hinge bearings for condition and security. If any substantial repairs affecting the weight are made to the elevator halves, the surfaces may need to have the balance checked before reinstallation. Elevator half reinstallation is the opposite of the steps listed above.
+    Now is a good time to inspect the hinge bearings for condition and security. If any substantial repairs affecting the weight are made to the elevator halves, the surfaces may need to have the balance checked before reinstallation (See <xref sectionTarget="2.31" prependLabel="Section"></xref>). Elevator half reinstallation is the reverse of the steps listed above.
 </p>
 
 <p><b>Replacement</b></p>
-<p>Replacement is opposite of removal.</p>
+<p>Replacement is reverse of removal.</p>
