--- a/html/Maintenance/Elevators.html
+++ b/html/Maintenance/Elevators.html
@@ -4,10 +4,10 @@
 
 <p>To replace the bearings, see <xref sectionTarget="2.45.12" prependLabel="Section"></xref>.</p>
 
-<p>Elevator stops are at the elevator horn. The down stop has a p/n 70067-1 neoprene washer in compression to absorb shocks. Sometimes this washer splits and falls out so during 100 hour inspections, check to see if this washer is in place. Also, if the control stick is pulled back sharply against the up stop or if a wind gust blows the elevator up, the up stop bracket may bend and should be straightened if found to be bent. </p>
+<p>Elevator stops are at the elevator horn. The down stop uses p/n 70067-1 neoprene washers in compression to absorb shocks. Sometimes this washer splits and falls out so during 100 hour inspections, check to see if this washer is in place. Also, if the control stick is pulled back sharply against the up stop or if a wind gust blows the elevator up, the up stop bracket may bend and should be straightened if found to be bent. </p>
 
-<p>Check the elevator and make sure that it is within the limits specified in the Type Certificate Data Sheet. </p>
-
-<p>One occurrence has been reported that the elevator controls were jammed when one of the inboard elevator counterweight bolts came loose and wedged between the elevator and the horizontal stabilizer. The safety wire on the bolt head was still intact and attached to the elevator. </p>
-
-<p>Service Letter #282 describes the steps to ensure free elevator travel on affected aircraft serial numbers (prior to -0333, except -0330).</p>
+<p>Check the elevator and make sure that it is within the limits specified in the Type Certificate Data Sheet which are also provided below for convenience: </p>
+<ul>
+    <li>Down Limit: 15.0° ± 1.0°</li>
+    <li>Up Limit: 29.0° ± 1.0°</li>
+</ul>
