--- a/html/Maintenance/Fuel Filter Cleaning.html
+++ b/html/Maintenance/Fuel Filter Cleaning.html
@@ -1,3 +1,10 @@
+<p>There are multiple fuel filters.</p>
+<ul>
+    <li>Firewall fuel filter</li>
+    <li>Cleanable engine fuel filter/screen.   (FCU Fuel Pump Inlet)</li>
+    <li>Disposable engine fuel filter.  (FCU Fuel Pump Outlet)</li>
+</ul>
+
 <p>
     For firewall fuel filter maintenance and inspections see <xref sectionTarget="2.75.6" xrefType="link" prependLabel="Section">Cross Reference Placeholder</xref>.
 </p>
@@ -7,5 +14,5 @@
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">CAUTION</p>
-    <p class="boxCautionLargeText">If any contamination is found in either fuel filter, investigate the cause and rectify the problem.</p>
+    <p class="boxCautionLargeText">If any contamination is found in a fuel filter, investigate the cause and rectify the problem.</p>
 </div>
