--- a/html/Maintenance/Horizontal Stabilizer Rigging.html
+++ b/html/Maintenance/Horizontal Stabilizer Rigging.html
@@ -1,5 +1,5 @@
 <p>
-    To rig the stabilizers, the elevators must be removed. The factory practice is to adjust the terminal in the forward
+    To rig the stabilizers, the elevators must be removed (See <xref sectionTarget="2.45.5" prependLabel="Section"></xref>). The factory practice is to adjust the terminal in the forward
     strut so that approximately the same amount of threads is showing on both R/H and L/H struts. The struts are pinned
     to the fuselage fittings and the stabilizers are pinned to the fuselage attach fittings (Don't forget the washers
     under each bolt head) but no nuts yet. Have someone hold up the stabilizer tips when they are being attached. Then
