--- a/html/Maintenance/Fuel Nozzle Cleaning.html
+++ b/html/Maintenance/Fuel Nozzle Cleaning.html
@@ -4,12 +4,20 @@
 
 <p>To remove or install fuel nozzles, refer to the proper Pratt & Whitney manual in <xref sectionTarget="1.0.2" prependLabel="Section"></xref>. Write down the location of the primary and secondary nozzles. The primary nozzle may be identified by a weld spot on the flat area next to one of the bolts. See <xref fileTarget="img_Fig_48.png" xrefType="link">Fig Cross Reference</xref> below. </p>
 
-<p>DO NOT MARK ON THE GAS GENERATOR CASE WITH A PENCIL. </p>
+
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">NOTE</p>
+    <p class="boxCautionLargeText">Do not mark on the gas generator case with a graphite pencil.</p>
+</div>
+
+
 <figure>
     <img class="imageCentered_5x2" src="img/img_Fig_48.png">
     <figcaption class="centerText">Fuel Nozzles</figcaption>
 </figure>
+
+
 <div class="boxCautionLarge">
-    <p class="boxCautionLargeHeader">IMPORTANT</p>
+    <p class="boxCautionLargeHeader">NOTE</p>
     <p class="boxCautionLargeText">The quality of fuel and the condition of the fuel and fuel nozzle will have a direct relation to the condition and the longevity of your engine.</p>
 </div>
