--- a/html/Maintenance/Oil Requirements.html
+++ b/html/Maintenance/Oil Requirements.html
@@ -1,35 +1,30 @@
-<p>Oil used in the Pratt & Whitney PT6A engine is synthetic based oil designed for turbine and jet engines. Unlike petroleum base lubricants, turbine oil cannot be mixed, one brand with another. If you have to change brands, you should drain the oil tank, oil cooler, gear reduction case, and accessory case. See <xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref> below for the drain locations. </p>
+<p>Oil used in the Pratt & Whitney PT6A engine is synthetic based oil designed for turbine and jet engines. Unlike petroleum base lubricants, turbine oil cannot be mixed unless specifically authorized by Pratt and Whitney. Oil used at the factory is Eastman/Exxon/BP 2380 Turbo Oil, Mobil Jet Oil II or AeroShell Turbine Oil 560.  The oil brand and type will be marked on the oil access door at the time of delivery from the factory.  If you have to change oil type, you should drain the oil tank, oil cooler, gear reduction case, and accessory case. See <xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref> below for the drain locations. </p>
+
+
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_49.png">
     <figcaption class="centerText">Drain Locations</figcaption>
 </figure>
 
-<p>The oil tank (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 7) is located on the bottom of the air inlet case and may be removed by removing the clevis pin (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 5), inserting a 1/2-20 NF bolt into the threaded plug and pulling. The drain plug just has an O-ring (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 6) on it and will come out with a little pull. The oil cooler may be drained by removing both hoses and allowing the oil to run out. Removing the chip detector (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 2) will drain the gear reduction case, as will removal of the drain plug (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 9) located in the lowest point to the accessory case. You cannot get it all out, but if you do that much, you will be in good shape. </p>
+<p>The oil tank drain (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 7) is located on the bottom of the air inlet case and may be removed by removing the clevis pin (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 5), inserting a 1/2-20 NF bolt into the threaded plug and pulling. The drain plug just has an O-ring (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 6) on it and will come out with a little pull. The oil cooler may be drained by removing both hoses and allowing the oil to run out. Removing the chip detector (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 2) or chip detector receptacle will drain the gear reduction case, as will removal of the drain plug (<xref fileTarget="img_Fig_49.png" xrefType="link">Fig Cross Reference</xref>-Item No. 9) located in the lowest point to the accessory case. You cannot get it all out, but if you do that much, you will be in good shape. </p>
 
-<p>Checking the oil should always be done within 10 minutes of shut down. Unlike other Pratts, this one does not require filling before checking. The reason for checking the level right after shutdown is that it does not allow the oil time to escape to other areas of the engine. Sometimes bad seals allow the oil to leak back into cavities inside the engine giving you a false indication on the dipstick. Once the engine starts turning, the scavenger pump picks up the oil and returns it to the oil tank. </p>
+<p>Checking the oil should always be done within 15 to 20 minutes of shut down. The reason for checking the level right after shutdown is that it does not allow the oil time to escape to other areas of the engine. Sometimes bad seals allow the oil to leak back into cavities inside the engine giving you a false indication on the dipstick. Once the engine starts turning, the scavenger pump picks up the oil and returns it to the oil tank. </p>
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">CAUTION</p>
-    <p class="boxCautionLargeText">Insure the oil dipstick is properly secured after checking oil level. A loose dipstick can allow most of the oil to be lost overboard within a short amount of time.</p>
+    <p class="boxCautionLargeText">Ensure the oil dipstick is properly secured after checking oil level. A loose dipstick can allow most of the oil to be lost overboard within a short amount of time.</p>
 </div>
 
-<p>Oil used at the factory is Eastman/Exxon/BP 2380 Turbo Oil, Mobil Jet Oil II or AeroShell Turbine Oil 560.  The oil brand and type will be marked on the oil access door at the time of delivery from the factory.  If a different brand is used, the engine and lines should be drained and a flushing procedure with the new oil should be carried out in accordance with the Pratt & Whitney PT6A Maintenance Manual. Also see Flight Manual. </p>
+
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">NOTE</p>
-    <p class="boxCautionLargeText">For all PT6A-65 series engines installed on the AT-802 aircraft, when performing motoring compressor runs of the engine such as for a compressor wash and/or a turbine wash, the main oil pressure pump can supply more oil to the engine than the oil scavenge pumps can return to the main oil tank.</p>
-    <p class="boxCautionLargeText">This can lead to engine oil filling the AGB (Accessory Gear Box) to a level high enough for the oil to drain overboard via the high-pressure fuel-pump drain.</p>
-    <p class="boxCautionLargeText">This should not be a cause for concern; once the engine is started and run at idle for several moments, the oil in the AGB will be scavenged back into the oil tank. After the engine is shut down, the oil level should be checked within 10 minutes and the oil level restored to its normal range.</p>
-    <p class="boxCautionLargeText">This situation will not have any effect on normal engine operation.</p>
+    <p class="boxCautionLargeText">When performing motoring compressor runs of the engine such as for a compressor wash and/or a turbine wash, the main oil pressure pump can supply more oil to the engine than the oil scavenge pumps can return to the main oil tank.  This can lead to engine oil filling the AGB (Accessory Gear Box) to a level high enough for the oil to drain overboard via the high-pressure fuel-pump drain.  This should not be a cause for concern; once the engine is started and run at idle for several moments, the oil in the AGB will be scavenged back into the oil tank. After the engine is shut down, the oil level should be checked within 15 to 20 minutes and the oil level restored to its normal range.  This situation will not have any effect on normal engine operation.</p>
 </div>
 
-<p>Occasionally there is a customer that has problems with elevated oil temperatures. To assist in determining what the cause of the problem is, Air Tractor has developed a thermostat test plug which most of the dealers have. This plug can be installed, in place of the thermostat, to determine whether or not the thermostat and oil cooler thermostat seat are good. </p>
+<p>Occasionally there is a customer that has problems with elevated oil temperatures. To assist in determining what the cause of the problem is, Air Tractor has developed a thermostat test plug which most of the dealers have. This plug can be installed, in place of the thermostat, to determine whether or not the thermostat and oil cooler thermostat seat are good.  To test the thermostat and seat, follow the procedure described in Service Letter #189.</p>
 
-<p>To test the thermostat and seat, follow the procedure described in Service Letter #189.</p>
-
-<p>To solve the oil cooling problem for operators in very hot areas Air Tractor has introduced a heavy duty oil cooler installation. The system is similar
-to the oil cooler currently installed on your aircraft. The new system, however, uses a larger oil cooler with more surface area and greater heat rejection capability. To see if this option would be appropriate for your aircraft, consult Service Letter #143.</p>
 
 <p>All engines produce small amounts of metal in the oil. However, excessive amounts of metal in the oil, as in the case of internal component failure, usually results in engine tear down and repair or overhaul. Before returning the engine to service every effort should be made to ensure that all particles of metal have been removed from the oil system.</p>
 
