--- a/html/Maintenance/Vertical Fin.html
+++ b/html/Maintenance/Vertical Fin.html
@@ -1,4 +1,4 @@
-<p>Details of the vertical fin are shown in <xref fileTarget="img_Fig_52.png" xrefType="link">Fig Cross Reference</xref>.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-13 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that loosen the nuts. </p>
+<p>Details of the vertical fin are shown in <xref fileTarget="img_Fig_52.png" xrefType="link">Fig Cross Reference</xref>.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-17 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that loosen the nuts. </p>
 
 <figure>
     <img class="imageCentered_3x5" src="img/img_Fig_52.png">
@@ -6,14 +6,11 @@
 </figure>
 
 
-<p>Check the torque on the two NAS1306-13 bolts at 100 hour intervals. If the bolt is held stationary and the torque wrench applied to the nut, the torque value should be 420 inch-pounds. For the reverse of this procedure, torque should be 460 inch-pounds. </p>
+<p>Check the torque on the two NAS1306-17 bolts at 100 hour intervals. If the bolt is held stationary and the torque wrench applied to the nut, the torque value should be 420 inch-pounds. For the reverse of this procedure, torque should be 460 inch-pounds. </p>
 
 <p>The rear spar attaches to the fuselage frame with NAS1303 bolts of various lengths, depending on the amount of shims required between the fuselage frame and the rear spar. The shims are of various thickness (.063, .080, .125) and the upper shims are combinations of p/n 30159-1, -2, or -3 while the lower shims are combinations of p/n 30160-1, -2, or -3. </p>
 
-<p>Aircraft serial numbers -0001 through -0661 may have come from the factory with standard AN bolts. If the aircraft is so equipped, it is recommended that the 6 each bolts and nuts installed through the vertical fin rear spar be replaced with NAS1303 bolts and MS21042-3 nuts as are being used on current production airplanes.
-</p>
-
-<p>The Owners Manual may be used as a guide for bolt installation. Be aware that the AN bolt length dash numbers are not the same as the NAS bolt dash numbers for a given length.</p>
+<p>Aircraft serial numbers -0001 through -0661 may have come from the factory with standard AN bolts. If the aircraft is so equipped, it is recommended that the 6 each bolts and nuts installed through the vertical fin rear spar be replaced with NAS1303 bolts and MS21042-3 nuts as are being used on current production airplanes. Be aware that the AN bolt length dash numbers are not the same as the NAS bolt dash numbers for a given length.</p>
 
 <p>The vertical fin rear spar is drilled on installation where the attachment is made to the top longeron. If a new fin is installed, make a drill template from the original fin rear spar in order to drill the four 3/16" holes for the attachment to the upper longeron. The template should be 2.44" wide and long enough to pick up the two lower attach bolts. The template should be made of either aluminum or steel, at least .063" thick. </p>
 
